--- a/Projeto-receita/style.css
+++ b/Projeto-receita/style.css
@@ -1,3 +1,9 @@
+:root{
+    font-family: "Alice", serif;
+    line-height: 150%;
+    color: #573a37;
+}
+
 body{
     background-image: url(assets/bg.jpg);
     background-size: cover;
@@ -12,3 +18,13 @@ body{
 
 
 }
+h1{
+    line-style: 140%;
+    font-size: 40px;
+}
+h2{
+    font-size: 24px;
+    }
+    h1,h2 {
+        color: #291b1a
+    }
